Fixing files management from AWS into standalone implementation.